# linux-virtual-netif-kmod

./: Makefile  README.md
src/: Makefile  vnetif.c
tests/: CMakeLists.txt  vnetif_test.cc
